Update to JavaSE21, Tycho 4.0.8 and Eclipse 2024-06
Signed-off-by: frank buloup <frank.buloup@univ-amu.fr>