@@ -1164,7 +1164,7 @@ public final class DocometreMessages extends NLS {
 		// load message values from bundle file
 		String bn = BUNDLE_NAME;
 		Locale locale = Locale.getDefault();
-		if (locale.getLanguage().equals(new Locale("fr").getLanguage())) bn = BUNDLE_NAME + "_fr";
+		if (locale.getLanguage().equals(Locale.of("fr").getLanguage())) bn = BUNDLE_NAME + "_fr";
 		NLS.initializeMessages(bn, DocometreMessages.class);
 	}
 
