@@ -1002,7 +1002,7 @@ public class ArduinoUnoProcess extends Process {
 //	    p.waitFor();
 	    
 	    
-	    java.lang.Process process = Runtime.getRuntime().exec(cmdLine);
+	    java.lang.Process process = Runtime.getRuntime().exec(new String[] {cmdLine});
 		process.waitFor();
 	    
 	    String line;
@@ -1166,7 +1166,7 @@ public class ArduinoUnoProcess extends Process {
 		fileWriter.write(cmd);
 		fileWriter.close();
 		// This bash file must be executable 
-		java.lang.Process process = Runtime.getRuntime().exec("chmod 777 " + bashFilePath);
+		java.lang.Process process = Runtime.getRuntime().exec(new String[]{"chmod 777 " + bashFilePath});
 		process.waitFor();
 		return /*"/bin/sh " +*/ bashFilePath;
 	}
@@ -1203,7 +1203,7 @@ public class ArduinoUnoProcess extends Process {
 		fileWriter.write(cmd);
 		fileWriter.close();
 		// This bash file must be executable 
-		java.lang.Process process = Runtime.getRuntime().exec("chmod 777 " + bashFilePath);
+		java.lang.Process process = Runtime.getRuntime().exec(new String[]{"chmod 777 " + bashFilePath});
 		process.waitFor();
 		return /*"/bin/sh " +*/ bashFilePath;
 	}
@@ -1234,7 +1234,7 @@ public class ArduinoUnoProcess extends Process {
 		
 	}
 
-	private boolean loadProcess() {
+	private boolean loadProcess() throws Exception {
 		// Verify device path
 		ArduinoUnoDACQConfiguration dacqConfiguration = (ArduinoUnoDACQConfiguration)getDACQConfiguration();
 		devicePath = dacqConfiguration.getProperty(ArduinoUnoDACQConfigurationProperties.DEVICE_PATH);
@@ -1256,45 +1256,19 @@ public class ArduinoUnoProcess extends Process {
 		String cmd = "";
 		IResource processResource = ObjectsController.getResourceForObject(this);
 		String resourcePath = processResource.getParent().getLocation().toOSString() + File.separatorChar + "BinSource" + File.separator + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + File.separator + "Build" + File.separator;
-		boolean useCLI = "true".equals(getDACQConfiguration().getProperty(ArduinoUnoDACQConfigurationProperties.USE_ARDUINOCLI))?true:false;
-		if(!useCLI) {
-			// Load Process with AVRDUDE
-			// Get AVRDude path
-			String inoHexFilePath = resourcePath + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + ".ino.hex";
-			if(previousINOHexFilePath.equals(inoHexFilePath) && !forceUpload) {
-				appendToEventDiary("Process " + processResource.getFullPath() + " was already loaded\n" );
-				return true;
-			}
-			
-			forceUpload = false;
-			previousINOHexFilePath = inoHexFilePath;
-			
-			String avrDudePath = dacqConfiguration.getProperty(ArduinoUnoDACQConfigurationProperties.AVRDUDE_PATH);
-			String confFilePath = "";
-			if(Platform.getOS().equals(Platform.OS_WIN32)) confFilePath = avrDudePath.replaceAll("avrdude.exe$", "");
-			else confFilePath = avrDudePath.replaceAll("avrdude$", "");
-			confFilePath = confFilePath + ".." + File.separator + "etc" + File.separator + "avrdude.conf";
-			if(Platform.getOS().equals(Platform.OS_WIN32)) confFilePath = "\"" + confFilePath + "\"";
-			
-			cmd = avrDudePath + " -C " + confFilePath +  " -p m328p -c arduino -P " + devicePath + " -U flash:w:" + inoHexFilePath + ":i"; 
-		} else {
-			String inoHexFilePath = resourcePath + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + ".ino.hex";
-			if(previousINOHexFilePath.equals(inoHexFilePath) && !forceUpload) {
-				appendToEventDiary("Process " + processResource.getFullPath() + " was already loaded\n" );
-				return true;
-			}
-			
-			
-			forceUpload = false;
-			previousINOHexFilePath = inoHexFilePath;
-			
-			String arduinoCLIPATH = getDACQConfiguration().getProperty(ArduinoUnoDACQConfigurationProperties.ARDUINOCLI_PATH);
-			cmd = arduinoCLIPATH + " upload -p " + devicePath + " --fqbn arduino:avr:uno -i " + inoHexFilePath;
+		String inoHexFilePath = resourcePath + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + ".ino.hex";
+		if(previousINOHexFilePath.equals(inoHexFilePath) && !forceUpload) {
+			appendToEventDiary("Process " + processResource.getFullPath() + " was already loaded\n" );
+			return true;
 		}
+		IPath wsPath = new Path(Platform.getInstanceLocation().getURL().getPath());
+		String currentFolder = wsPath.append(processResource.getParent().getFullPath()).toOSString();
+		String outputFolder = currentFolder + File.separator + "BinSource" + File.separator + processResource.getName().replaceAll(Activator.processFileExtension +"$", "");
 		
+		cmd = createUploadProcess(outputFolder);
 		
 		try {
-			java.lang.Process processCMD = Runtime.getRuntime().exec(cmd);
+			java.lang.Process processCMD = Runtime.getRuntime().exec(new String[] {cmd});
 			processCMD.waitFor();
 			String line;
 			BufferedReader error = new BufferedReader(new InputStreamReader(processCMD.getErrorStream()));
@@ -1323,6 +1297,48 @@ public class ArduinoUnoProcess extends Process {
 			Activator.logErrorMessageWithCause(e);
 			return false;
 		}
+	}
+	
+	private String createUploadProcess(String outputFolder) throws IOException, InterruptedException {
+		// We need to create a bash file in order to launch Arduino uno's compilation
+		// Bash file path
+		String bashFilePath = outputFolder + File.separator;
+		if(Platform.getOS().equals(Platform.OS_WIN32)) bashFilePath = bashFilePath + "uploadSketch.bat";
+		if(Platform.getOS().equals(Platform.OS_MACOSX)) bashFilePath = bashFilePath + "uploadSketch.sh";
+		if(Platform.getOS().equals(Platform.OS_LINUX)) bashFilePath = bashFilePath + "uploadSketch.sh";
+		// Create Bash file
+		final File bashFile = new File(bashFilePath);
+		if(bashFile.exists()) bashFile.delete();
+		FileWriter fileWriter = new FileWriter(bashFile);
+		String cmd = "";
+		IResource processResource = ObjectsController.getResourceForObject(this);
+		String resourcePath = processResource.getParent().getLocation().toOSString() + File.separatorChar + "BinSource" + File.separator + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + File.separator + "Build" + File.separator;
+		boolean useCLI = "true".equals(getDACQConfiguration().getProperty(ArduinoUnoDACQConfigurationProperties.USE_ARDUINOCLI))?true:false;
+		if(!useCLI) {
+			String inoHexFilePath = resourcePath + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + ".ino.hex";
+			previousINOHexFilePath = inoHexFilePath;
+			String avrDudePath = getDACQConfiguration().getProperty(ArduinoUnoDACQConfigurationProperties.AVRDUDE_PATH);
+			String confFilePath = "";
+			if(Platform.getOS().equals(Platform.OS_WIN32)) confFilePath = avrDudePath.replaceAll("avrdude.exe$", "");
+			else confFilePath = avrDudePath.replaceAll("avrdude$", "");
+			confFilePath = confFilePath + ".." + File.separator + "etc" + File.separator + "avrdude.conf";
+			if(Platform.getOS().equals(Platform.OS_WIN32)) confFilePath = "\"" + confFilePath + "\"";
+			cmd = avrDudePath + " -C " + confFilePath +  " -p m328p -c arduino -P " + devicePath + " -U flash:w:" + inoHexFilePath + ":i"; 
+		} else {
+			String inoHexFilePath = resourcePath + processResource.getName().replaceAll(Activator.processFileExtension + "$", "") + ".ino.hex";
+			previousINOHexFilePath = inoHexFilePath;
+			String arduinoCLIPATH = getDACQConfiguration().getProperty(ArduinoUnoDACQConfigurationProperties.ARDUINOCLI_PATH);
+			cmd = arduinoCLIPATH + " upload -p " + devicePath + " --fqbn arduino:avr:uno -i " + inoHexFilePath;
+		}
+		forceUpload = false;
+		fileWriter.write(cmd);
+		fileWriter.close();
+		if(!Platform.getOS().equals(Platform.OS_WIN32)) {
+			// This bash file must be executable 
+			java.lang.Process process = Runtime.getRuntime().exec(new String[]{"chmod 777 " + bashFilePath});
+			process.waitFor();
+		}
+		return bashFilePath;
 	}
 
 	@Override
